--- a/service.html
+++ b/service.html
@@ -4,143 +4,239 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="viewport" content='width=device-width, initial-scale=1'>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" >
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Courgette&family=Lora:ital,wght@0,400..700;1,400..700&family=Playball&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Varela+Round&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+          <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <link rel="stylesheet" href="css/flaticon.css" type="text/css">
+
+        <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<style>
-  :root{
-    --blue1: #16a8f8;
-    --blue2: #00b8ff;
-  }
+    <div class="over">
 
-  body { margin:0; font-family: sans-serif; background: #fff; }
+        <header>
+        <nav class="navbar navbar-expand-sm navbar-dark  flexy-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="javascript:void(0)"><img src="images/SweetieBakes Logo Design.png" alt="" width="100%"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="service.html">Service</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="text" placeholder="Search">
+        <button class="btn btn-dark" type="button">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+    </header> 
+<section class="about-sec1 p-0 m-0" >
+  <div class="container-fluid"><div class="row">
+    <div class="col p-0">
+      <div class="herobox1">
+        <img src="images/easter-themed-cake-served-and-beautifully-decorated-free-photo.jpg" width="100%" alt="">
+            <div class="herotext">
+<h1>Fresh Daily Cakes</h1>
+<h3>Enjoy freshly baked cakes made every day with high-quality ingredients.</h3>
+    </div>
+      </div>
+    </div>
+  </div></div>
+    <!-- Bottom smooth curve -->
+  <svg class="curve"  viewBox="0 0 1440 150" preserveAspectRatio="none">
+    <path  d="
+      M0,80
+      C200,20 400,140 700,90
+      C950,40 1200,120 1440,70
+      L1440,180
+      L0,180
+      Z"
+      fill="var(--back-color)"></path>
+  </svg>
 
-  /* Container for the hero / section */
-  .hero {
-    position: relative;
-    width: 100%;
-    height: 420px;         /* change this to control section height */
-    overflow: hidden;
-    background: linear-gradient(180deg, #ffffff 0%, #ffffff 65%); /* white top */
-  }
+</section>
+<section class="about-sec2" style="background-color: var(--back-color);">
+    <div class="row">
+    <div class="col">
+<div class="aboutbox1" style="border: solid 1px white;">
+  <div class="row">
+    <div class="col"><div class="aboutinbox1">
 
-  /* The SVG sits at bottom of the hero and scales */
-  .hero svg {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-    display: block;
-  }
+                <i class="bi bi-truck"></i>
+                <h3>ON-TIME DELIVERY</h3>
+                <p>Because no one likes late surprises.</p>
 
-  /* Optional content centered above the wave */
-  .hero .content {
-    position: relative;
-    z-index: 2;
-    padding: 40px;
-    text-align: center;
-    color: #111;
-  }
-</style>
-<style>
-  :root{
-    --blue1: #16a8f8;
-    --blue2: #00b8ff;
-  }
+    </div></div>
+    <div class="col"><div class="aboutinbox1">
+                   <i class="bi bi-cake"></i>
+                <h3>500+ DESIGNS</h3>
+                <p>Wishes come in all shapes and sizes.</p>
+    </div></div>
+    <div class="col"><div class="aboutinbox1">
+                <i class="bi bi-gift"></i>
+                <h3>2 CR+ ORDERS</h3>
+                <p>You can close your eyes and trust us.</p>
+    </div></div>
+    <div class="col"><div class="aboutinbox1">
+                    <i class="bi bi-cookie"></i>
+                <h3>BAKED FRESH</h3>
+                <p>Spreading smiles, one slice at a time.</p>
+    </div></div>
+  </div>
+</div>
+    </div>
+  </div>
+</section>
+  <section class="service-sec1">
+  <div class="container"><div class="row">
+    <div class="col">
+      <div class="servicebox1">
+        <img src="images/matcha-layer-cake-3d-illustration-3d-render-png.png" alt="" width="100%">
+      </div>
+    </div>
+    <div class="col">
+      <div class="servicebox2">
+        <h3>Creative Cakes, Exceptional Service</h3>
+        <p>From bold designs to unique flavor combinations, we offer fully customizable cakes for every event. Enjoy smooth ordering, quick delivery, and bakery-quality freshness.</p>
+      </div>
+    </div>
+  </div></div>
+</section>
 
-  body { margin:0; font-family: sans-serif; background: #fff; }
+<section class="sec7">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="box4">
+                    <h1>Our Promise</h1>
+                    <p>There’s no secret spell—only honest, hard work!</p>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="row">
+            <div class="col"><div class="box5">
+                <i class="bi bi-truck"></i>
+                <h3>ON-TIME DELIVERY</h3>
+                <p>Because no one likes late surprises.</p>
+            </div></div>
+            <div class="col"><div class="box5">
+                <i class="bi bi-cake"></i>
+            
+                <h3>500+ DESIGNS</h3>
+                <p>Wishes come in all shapes and sizes.</p>
+            </div></div>
+            <div class="col"><div class="box5">
+                <i class="bi bi-gift"></i>
+                <h3>2 CR+ ORDERS</h3>
+                <p>You can close your eyes and trust us.</p>
+            </div></div>
+            <div class="col"><div class="box5">
+                <i class="bi bi-cookie"></i>
+                <h3>BAKED FRESH</h3>
+                <p>Spreading smiles, one slice at a time.</p>
+            </div></div>
+        </div> -->
+    <!-- Carousel -->
+<div id="demo1" class="carousel  w-100 slide" data-bs-ride="carousel">
 
-  /* Container for the hero / section */
-  .hero {
-    position: relative;
-    width: 100%;
-    height: 420px;         /* change this to control section height */
-    overflow: hidden;
-    background: linear-gradient(180deg, #ffffff 0%, #ffffff 65%); /* white top */
-  }
-
-  /* The SVG sits at bottom of the hero and scales */
-  .hero svg {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-
-  /* Optional content centered above the wave */
-  .hero .content {
-    position: relative;
-    z-index: 2;
-    padding: 40px;
-    text-align: center;
-    color: #111;
-  }
-</style><style>
-  :root{
-    --blue1: #16a8f8;
-    --blue2: #00b8ff;
-  }
-
-  body { margin:0; font-family: sans-serif; background: #fff; }
-
-  /* Container for the hero / section */
-  .hero {
-    position: relative;
-    width: 100%;
-    height: 420px;         /* change this to control section height */
-    overflow: hidden;
-    background: linear-gradient(180deg, #ffffff 0%, #ffffff 65%); /* white top */
-  }
-
-  /* The SVG sits at bottom of the hero and scales */
-  .hero svg {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-
-  /* Optional content centered above the wave */
-  .hero .content {
-    position: relative;
-    z-index: 2;
-    padding: 40px;
-    text-align: center;
-    color: #111;
-  }
-</style>
-<section class="hero">
-  <div class="content">
-    <h1>Hero Title</h1>
-    <p>Short tagline or description — content sits above the smooth wave.</p>
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo1" data-bs-slide-to="0" class="active" style="display: none;"></button>
+    <button type="button" data-bs-target="#demo2" data-bs-slide-to="1" style="display: none;"></button>
+    <button type="button" data-bs-target="#demo2" data-bs-slide-to="2" style="display: none;"></button>
   </div>
 
-  <!-- Responsive SVG wave: smooth, "up then slope down" -->
-  <svg viewBox="0 0 1200 200" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-    <defs>
-      <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
-        <stop offset="0%" stop-color="var(--blue1)"/>
-        <stop offset="100%" stop-color="var(--blue2)"/>
-      </linearGradient>
-    </defs>
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+  <div class="box5">
+                <i class="bi bi-truck"></i>
+                <h3>ON-TIME DELIVERY</h3>
+                <p>Because no one likes late surprises.</p>
+            </div>
+    </div>
+    <div class="carousel-item">
+<div class="box5">
+                <i class="bi bi-cake"></i>
+            
+                <h3>500+ DESIGNS</h3>
+                <p>Wishes come in all shapes and sizes.</p>
+            </div>
+    </div>
+    <div class="carousel-item">
+    <div class="box5">
+                <i class="bi bi-gift"></i>
+                <h3>2 CR+ ORDERS</h3>
+                <p>You can close your eyes and trust us.</p>
+            </div>
+    </div>
+    <div class="carousel-item">
+<div class="box5">
+                <i class="bi bi-cookie"></i>
+                <h3>BAKED FRESH</h3>
+                <p>Spreading smiles, one slice at a time.</p>
+            </div>
+    </div>
+  </div>
 
-    <!--
-      Path explanation:
-      - Starts at left bottom (0,200)
-      - Smooth cubic Beziers produce the up-then-down curve
-      - Ends at right bottom (1200,200) then closes the shape
-    -->
-    <path d="M0,200
-             C160,140 360,80 600,110
-             C820,140 980,90 1200,140
-             L1200,200 L0,200 Z"
-          fill="url(#g1)"></path>
-  </svg>
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev "type="button" data-bs-target="#demo1" data-bs-slide="prev" >
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo1" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+    </div>
 </section>
+
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                <div class="footerbox1 m-auto">
+                    <h3>Taste the Art of Baking</h3>
+                    <p>At [Your Cake Brand], we create gourmet cakes that blend flavor, elegance, and creativity to make every occasion special.</p>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                <div class="footerbox2 m-auto">
+                    <h3>Explore</h3>
+                    <p>Home | About | Menu | Custom Cakes | Contact</p>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 ">
+                <div class="footerbox3 m-auto">
+                    <h3>Connect With Us</h3>
+                    <p><i class="bi bi-telephone-fill"></i> <i class="bi bi-geo-alt-fill"></i> <i class="bi bi-envelope-fill"></i></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+    </div>
 
 </body>
 </html>
