--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark  flexy-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+    <a class="navbar-brand" href="javascript:void(0)"><img src="images/SweetieBakes Logo Design.png" alt="" width="100%"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -769,6 +769,30 @@
     </div>
 </section>
 
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                <div class="footerbox1 m-auto">
+                    <h3>Taste the Art of Baking</h3>
+                    <p>At [Your Cake Brand], we create gourmet cakes that blend flavor, elegance, and creativity to make every occasion special.</p>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                <div class="footerbox2 m-auto">
+                    <h3>Explore</h3>
+                    <p>Home | About | Menu | Custom Cakes | Contact</p>
+                </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                <div class="footerbox3 m-auto">
+                    <h3>Connect With Us</h3>
+                    <p><i class="bi bi-telephone-fill"></i> <i class="bi bi-geo-alt-fill"></i> <i class="bi bi-envelope-fill"></i></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <!-- Initialize Swiper -->
