--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark  flexy-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="javascript:void(0)"><img src="images/SweetieBakes Logo Design.png" alt="" width="100%"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="mynavbar">
@@ -232,8 +232,8 @@
     </div>
     </div>
     </div>
-    <div class="swiper-button-next text-light"></div>
-    <div class="swiper-button-prev text-light"></div>
+    <div class="swiper-button-next text-dark"></div>
+    <div class="swiper-button-prev text-dark"></div>
   </div>
 </section>
 <section class="sec4 py-5">
@@ -692,30 +692,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class="col"><div class="box5">
-                <i class="bi bi-truck"></i>
-                <h3>ON-TIME DELIVERY</h3>
-                <p>Because no one likes late surprises.</p>
-            </div></div>
-            <div class="col"><div class="box5">
-                <i class="bi bi-cake"></i>
-            
-                <h3>500+ DESIGNS</h3>
-                <p>Wishes come in all shapes and sizes.</p>
-            </div></div>
-            <div class="col"><div class="box5">
-                <i class="bi bi-gift"></i>
-                <h3>2 CR+ ORDERS</h3>
-                <p>You can close your eyes and trust us.</p>
-            </div></div>
-            <div class="col"><div class="box5">
-                <i class="bi bi-cookie"></i>
-                <h3>BAKED FRESH</h3>
-                <p>Spreading smiles, one slice at a time.</p>
-            </div></div>
-        </div> -->
-    <!-- Carousel -->
+  
 <div id="demo1" class="carousel  w-100 slide" data-bs-ride="carousel">
 
   <!-- Indicators/dots -->
