--- a/about.html
+++ b/about.html
@@ -79,9 +79,9 @@
 <section class="about-sec2">
     <div class="row">
     <div class="col">
-<div class="aboutbox1">
+<div class="aboutbox1 text-light">
   <div class="row">
-    <div class="col"><div class="aboutinbox1">
+    <div class="col"><div class="aboutinbox1 ">
 
                 <i class="bi bi-truck"></i>
                 <h3>ON-TIME DELIVERY</h3>
@@ -116,7 +116,7 @@
           <div class="aboutinbox2">
             <img src="images/pexels-ibrahimboran-903415.jpg" alt="" width="100%" height="100%">
           </div>
-          <div class="aboutinbox3 p-2">
+          <div class="aboutinbox3  text-light p-2">
             <h4>Crafting Moments That Taste as Good as They Look</h4>
             <p>We specialize in creating gourmet cakes that blend rich flavors with artistic design. Using only the finest ingredients, our bakers craft each piece with passion and precision. Whether it’s a birthday, wedding, or a simple sweet craving, we make your moments unforgettable.</p>
             <button class="btn  text-light">More <i class="bi bi-arrow-right"></i> </button>
