--- a/service.html
+++ b/service.html
@@ -80,7 +80,7 @@
 <section class="about-sec2" style="background-color: var(--back-color);">
     <div class="row">
     <div class="col">
-<div class="aboutbox1" style="border: solid 1px white;">
+<div class="aboutbox1 text-light" style="border: solid 1px white;">
   <div class="row">
     <div class="col"><div class="aboutinbox1">
 
