--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
 </section>
     <section class="sec3">
-    <h5 class="text-light pt-3 px-2 d-flex gap-2">Categories <i class="bi bi-arrow-right"></i> </h5>
+    <h5 class=" pt-3 px-2 d-flex gap-2">Categories <i class="bi bi-arrow-right"></i> </h5>
     <!-- Swiper -->
   <div class="swiper">
     <div class="swiper-wrapper py-4">
@@ -803,3 +803,4 @@
   </div>
 </body>
 </html>
+
